Fix: hide save button properly when right panel collapse; New: disable comment panel if no measurement

--- a/assets/tag-n-comment-panel.css
+++ b/assets/tag-n-comment-panel.css
@@ -13,12 +13,14 @@
 
 .div_comments-n-tags_expand-width {
     width: 30vw;
+    opacity: 1;
     border-left: var(--border);
     box-shadow: var(--drop-shadow_s);
 }
 
 .div_comments-n-tags_collapse-width {
     width: 0;
+    opacity: 0;
     border-left: none;
     box-shadow: none;
 }
